--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "file-type": "^19.6.0",
+    "mime-types": "^2.1.35",
     "mysql2": "^3.11.3",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
